infra/istio/zigbee2mqtt-ingress-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  namespace: home-automation
  name: zigbee2mqtt-ingress-gateway
  labels:
    app: zigbee2mqtt-ingress-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8099
      name: http
      protocol: HTTP
    hosts:
    - "*"
