infra/istio/nginx-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx
  labels:
    app: nginx-ingress-gateway
spec:
  hosts:
  - "nginx.local"
  gateways:
  - nginx-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: nginx
