infra/istio/zigbee2mqtt-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: home-automation
  name: zigbee2mqtt
  labels:
    app: zigbee2mqtt-ingress-gateway
spec:
  hosts:
  - "*"
  gateways:
  - zigbee2mqtt-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8099
        host: zigbee2mqtt-lb
